Tue Jan 10 20:37:34 2023  Tom Hughes  <tom@compton.nu>

        * Makefile.PL
          Change version number to 1.14.

Tue Jan 10 20:36:36 2023  Graham Knop  <haarg@haarg.org>

        * Makefile.PL
          Fix INSTALLDIRS option for newer perls.

Fri Jan  6 22:47:22 2023  Tom Hughes  <tom@compton.nu>

        * Zlib.pm
          Change version number to 1.13.

Thu Dec 29 22:12:06 2022  Tom Hughes  <tom@compton.nu>

        * Zlib.pm
          Change version number to 1.12.

Fri Dec 323 19:14:56 2022  Yves Orton  <demerphq@gmail.com>

        * t/basic.t
        * t/external.t
        * t/getc.t
        * t/getline.t
        * t/large.t
        * t/tied.t
        * t/uncomp1.t
        * t/uncomp2.t
          Use a distinct test file, with pid in it, for each test.

Sun Sep 13 12:36:40 2020  Tom Hughes  <tom@compton.nu>

        * Zlib.pm
          Change version number to 1.11.

        * Makefile.PL
          Add links to repository and bug tracker.

        * Zlib.pm
        * Makefile.PL
        * t/basic.t
        * t/external.t
        * t/getc.t
        * t/getline.t
        * t/import.t
        * t/large.t
        * t/tied.t
        * t/uncomp1.t
        * t/uncomp2.t
          Enable strict mode and warnings throughout.

Tue Jul 14 22:29:01 2009  Tom Hughes  <tom@compton.nu>

        * Zlib.pm
          Change version number to 1.10.

        * Zlib.pm
        * Makefile.PL
          Require Compress::Zlib 2.000 or later.

Thu Jan  3 18:35:44 2008  Tom Hughes  <tom@compton.nu>

        * Zlib.pm
          Changed version number to 1.09.

        * Makefile.PL
          Install in the core library directory if the perl
          version is 5.9.3 or later.

Sun Nov 18 17:43:49 2007  Tom Hughes  <tom@compton.nu>

        * Zlib.pm
          Changed version number to 1.08.

        * t/uncomp1.t
        * t/uncomp2.t
          Add the PID to the name of the temporary file used by
          several tests to avoid clashing with the directory